<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/p1"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/p2"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/p3"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/exa"
        android:layout_marginTop="30dp"/>

   </LinearLayout>
   <LinearLayout
    android:layout_width="200dp"
    android:layout_height="wrap_content"
       android:orientation="vertical"
     >

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25dp"/>


     <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25dp"/>


   </LinearLayout>

  </LinearLayout>
</LinearLayout>