<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/tiled_background"

    tools:context="com.example.divisist.divisist.divisiondesistemas.Inicio">




    <LinearLayout style="@style/LoginFormContainer"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center">



        <ImageView
        android:id="@+id/imagen"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ufps"/>


        <TextView
            android:id="@+id/pantalla"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:scrollbars="vertical"
            android:maxLines="12"/>



        <EditText
            android:id="@+id/codigo"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_codigo"
            android:textColorHint="#FFFF4444"
            android:inputType="number"/>

        <EditText
            android:id="@+id/contraseña"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contrasena"
            android:password="true"
            android:textColorHint="#FFFF4444"



            android:imeOptions="actionUnspecified" />




        <Button android:id="@+id/peticionPOST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/iniciar_sesion"

            android:paddingLeft="32dp"
            android:paddingRight="32dp"

            android:shadowColor="#000"
            android:background="#ffff3333"

            android:layout_gravity="center" />



    </LinearLayout>
</RelativeLayout>
