<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:gravity="top|center"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingRight="15dp"

    android:background="@drawable/selector_card_background"
    android:descendantFocusability="afterDescendants">


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border">
        <TextView
            android:text="Materia X - Def"
            android:textSize="20dp"
            android:paddingRight="10dp"
            android:maxWidth="300dp"
            android:id="@+id/nombreM"
            android:paddingBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            />


        <!--   android:id="@+id/card_main_inner_simple_title"

          -->
        <EditText
            android:text=""

            android:width="90dp"
            android:paddingBottom="10dp"
            android:paddingLeft="0dp"
            android:textSize="26dp"
            android:textStyle="bold"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:inputType="numberDecimal"
            android:layout_gravity="right"
            android:id="@+id/notaDef"
            android:maxLength="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_izq"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#000"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="0dp">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:gravity="center"
            android:weightSum="2"

            >
            <TextView
                android:text="@string/P1"
                android:textSize="15dp"
                android:gravity="left"
                android:layout_gravity="left"

                android:id="@+id/card_main_inner_simple_title4"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:text=""

                android:textSize="20dp"
                android:inputType="numberDecimal"
                android:gravity="left"
                android:layout_gravity="left"
                android:id="@+id/notaPP"
                android:maxLength="3"
                android:layout_marginLeft="10dp"
                android:layout_width="60dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_izq">

            <TextView
                android:text="@string/P2"
                android:gravity="left"
                android:layout_gravity="left"
                android:textSize="15dp"
                android:id="@+id/card_main_inner_simple_titl3e"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:text=""
                android:textSize="20dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:id="@+id/notaSP"
                android:inputType="numberDecimal"
                android:layout_marginLeft="10dp"
                android:layout_width="60dp"
                android:textAlignment="center"
                android:maxLength="3"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border_izq">
            <TextView
                android:text="@string/P3"
                android:gravity="left"
                android:layout_gravity="left"
                android:textSize="15dp"
                android:id="@+id/card_main_inner_simple_titl5"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:text=""
                android:gravity="left"
                android:layout_gravity="left"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                android:id="@+id/notaTP"
                android:maxLength="3"
                android:layout_marginLeft="10dp"
                android:layout_width="60dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/border_izq"
            >



            <TextView
                android:text="@string/EX"
                android:textSize="15dp"
                android:id="@+id/card_main_inner_simple_tit6e"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:text=""
                android:textSize="20dp"
                android:id="@+id/notaEX"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:layout_gravity="left"
                android:layout_width="60dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </LinearLayout>



</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reiniciar"
        android:id="@+id/reiniciar"
        android:layout_gravity="center"
        android:background="@drawable/selector_card_background"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        android:id="@+id/volver"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:background="@drawable/selector_card_background"/>
    </LinearLayout>
    </LinearLayout>

